fix(ionic-app): align logout button content to left

--- a/ionic-app/src/app/features/profile/profile.page.scss
+++ b/ionic-app/src/app/features/profile/profile.page.scss
@@ -31,5 +31,5 @@ ion-segment-button {
 }
 
 .logout-button::part(native) {
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
